--- a/CV_Clement_Hottier_prive.tex
+++ b/CV_Clement_Hottier_prive.tex
@@ -34,6 +34,7 @@
 % improve word spacing and hyphenation
 \usepackage{microtype}
 \usepackage{ragged2e}
+\usepackage{enumitem}
 
 % take care of proper font encoding
 \ifxetex
@@ -78,7 +79,7 @@
 % your name
 \cvname{Clément Hottier}
 % job title/career
-\cvjobtitle{Post Doctorant}
+\cvjobtitle{Data Scientist}
 % date of birth
 \cvbirthday{22 Juin 1992}
 % phone number
@@ -139,59 +140,123 @@
 
 \cvsection{Expériences Professionnelles}
 \begin{cvtable}
-  \cvitem{2021-}{Post-Doctorant}{Observatoire de Paris}{- Conception d'algorithme de
-  tomographie 3D}
-  \cvitem{2019-2020}{Enseignant Chercheur (ATER)}{Observatoire de Paris}{- Exploration
-    de données et identification croisée de structures\\
-    - Big Data (Python, Java, SQL)\\
-    - Mise a disposition de base de données (SQL, ADQL, Fits)\\
-    - Administration de données non réduite (HDF5)\\
-    - Implémentation d'algorithme de classification et création de catalogues (Python)
+  \cvitem{2021-}{Observatoire de Paris - CNES}{}{
+% Conception, implémentation, test et documentation d'une librairie d'exploration et de visualisation de cube densité adapté à l'astronomie (python3 OO : matplotlib/scipy/numpy/h5py/healpy)}
+    Conception d'une bibliothèque d'exploration de données 3D:
+    \begin{itemize}[noitemsep,nolistsep,leftmargin=*]
+      \item Implémentation en python3 orienté objet en utilisant matplotlib, scipy, numpy
+      \item Optimisation mémoire et implémentation d'un "lazy mode" pyh5
+      \item implémentation de la prise charge des healpix 
+    \end{itemize}
+    Conception d'algorithme de
+  tomographie 3D (python3 scipy,numpy)}
+  
+  \cvitem{2019-2020}{Observatoire de Paris-UFE/GEPI}{}{
+    Exploitation de cube 3D de densité :
+    \begin{itemize}[noitemsep,nolistsep,leftmargin=*]
+      \item Administration des cube de données brute en HDF5 (python3:h5py et Java:JHDF5)
+      \item Implémentation d'un algorithme de segmentation en Python 3 (orienté objet, numpy,
+        scipy, numba)
+      \item Mise a disposition de données réduite et catalogue (ADQL, Table fits, Table VO)
+    \end{itemize}
+    % - Exploration de données et identification croisée de structures (Python 3 :
+    % matplotlib/pandas)\\
+    % - Mise a disposition de base de données (ADQL, Table fits, Table VO)\\
+    % - Administration de données brute (HDF5 ; python3:h5py et Java:JHDF5)\\
+    % - Implémentation d'algorithme de classification et création de catalogues (Python3 OO : numpy/scipy/numba)\\
+    % - Création de la boite à outils de réduction d'image CCD et spectroscopie pour stage d'observation à l'OHP (python3 : astropy/numpy/matplotlib) Documentation (markdown) Distribution de la librairie en image docker et paquet python.
+    Développement de la chaine de traitement de données pour les stage OHP (python3):
+    \begin{itemize}[noitemsep,nolistsep,leftmargin=*]
+      \item Réduction des images CCD (bias, PLU) et extraction de la photométrie 
+      \item Réduction spectroscopique (bias, PLU) et automatisation de la calibration en
+        longueur d'onde
+      \item Documentation et cookbook en markdown et jupyter notebook
+      \item Distribution sous la forme d'image docker
+    \end{itemize}
     }
-    \cvitem{2016-2019}{Doctorant (Avec mission d'enseignement)}{Observatoire de Paris}{
-      - Conception, optimisation, et validation d'un algorithme d'analyse par déconvolution Bayésienne (Java)\\
-    - Implémentation et Intégration continue d'un logiciel d'analyse de données (Git et
-    GitLab CI)\\
-    - Gestion d'un logiciel d'analyse (Java) en mode production dans un centre de calcul ($\approx
-  200\.000$hCPU) et des résultats brut ($10$TB)\\
-  - Développement du Pipeline de post processing et de visualisation (Python)
     
-}
+    \cvitem{2016-2019}{Observatoire de Paris - GEPI (Doctorat)}{}{
+      Mise au point d'un Logiciel d'analyse et modélisation de photométrie et d'astrométrie par
+      déconvolution bayésienne :
+      \begin{itemize}[noitemsep,nolistsep,leftmargin=*]
+        \item Rédaction d'une documentation, en Javadoc, spécifiant les besoins et les
+          algorithmes 
+        \item Écriture de l'algorithme de déconvolution en Java (orienté objet), passage de
+          Ant/Ivy à Gradle pour la compilation et la gestion des dépendance, et de SVN à Git
+          pour la gestion de version et la collaboration
+        \item Analyse et optimisation du code (Yourkit), évolution des algorithmes avec le
+          multithreading de Java, simplification du code la programmation
+          fonctionnelle de Java 8 (temps CPU/10)
+        \item Changement des formats de données, choix de HDF5 pour sa rapidité d'accès et sa
+          compatibilité avec Java (JHDF5) et Python 3. Choix d'une base SQLite 3 pour
+          l'indexation des résultats (vitesse accées x100, occupation x0.5)
+          \item Écriture des tests unitaire et non-régression (JUnit), automatisation des tests
+            et génération de la documentation avec GitlabCI, Gitlab Pages et docker.
+          \item Utilisation d'un Mesocentre et de SLURM pour test des versions et application
+            de la version stable (400 000 hCPU)
+          \item Écriture du post-processing et de la visualisation en Python 3   avec  Numpy,
+            Scipy et Matplotlib (versionnage avec Git, tests unitaires avec Green).
+        \end{itemize}
+      % - Conception et validation d'un algorithme d'analyse photométrique et astrométrique par déconvolution Bayésienne (Java OO, ant, graddle, svn, git)\\
+      % - Documentation et tests unitaires (Javadoc, Junit)
+      % - Test et génération de la documentation automatique (gitlabCI, gitlatb Pages, docker, graddle)\\
+      % - pProfiling et optimisation logiciel(Java yourkit; Java multithreading ; Java : programmation fonctionnelle)\\
+      % - Optimisation accées mémoire et reorganisation de data model (HDF5 ; Java : JHDF5, Java : healpix)\\
+      % - Utilisation massive de grappe de calcul (slurm)\\
+    % - Gestion et indexation de résultats brut dans des centre de calcul (python3, Java, sqlite)\\
+  % - Développement d'un Pipeline de post processing et de visualisation (Python3 OO : numpy/scipy/matplotlib)
+    }
 
-  \cvitem{Mars - Juillet 2016}{Stage Master 2}{Institut d'Astrophysique de Paris}
+  \cvitem{Mars - Juillet 2016}{Institut d'Astrophysique de Paris}{}
   {Conception et mise au point d'un modèle d'analyse par maximisation de vraissemblance et
-  chaine de Markov}
+  chaine de Markov (Fortran ; openMPI ; python3 : matplotlib)}
   % \cvitem{Avril - Juillet 2015}{Stage M1}{Observatoire de Paris - LERMA}
   % {Étude de l'impact des Quasars radio loud sur le milieu intergalactique à l'époque de la
   % réionisation}
 \end{cvtable}
 
-\cvsection{Expériences d'enseignement}
-\subsection{Universitaire}
-\begin{cvtable}
-  \cvitem{2016-2020}{Cours Magistraux et Travaux dirigés}{Observatoire de Paris}{
-  Programmation Scientifique - Programmation Latex - Mécanique Quantique}
+%\cvsection{Expériences d'enseignement}
+%\subsection{Universitaire}
+%\begin{cvtable}
+ % \cvitem{2016-2020}{Cours Magistraux et Travaux dirigés}{Observatoire de Paris}{
+ % Programmation Scientifique - Programmation Latex - Mécanique Quantique}
   
-  \cvitem{2016-2020}{Stage d'observation}{Observatoire de Paris/Univ Paris-Saclay}
-  {- Encadrement d'observations sur instruments professionnels\\
-   - Développement de la boîte à outils de réduction des données et distribution en package
- python et image Docker}
-\end{cvtable}
+ % \cvitem{2016-2020}{Stage d'observation}{Observatoire de Paris/Univ Paris-Saclay}
+ % {- Encadrement d'observations sur instruments professionnels\\
+ %  - Développement de la boîte à outils de réduction des données et distribution en package
+ %python et image Docker}
+%\end{cvtable}
 
-\subsection{Médiation scientifique}
+%\subsection{Médiation scientifique}
+%\begin{cvtable}
+%  \cvitem{2020}{\textbf{Conférence de Presse Gaia EDR3}}{\href{https://youtu.be/kOLjv-9lsmA?t=2145}
+%    {\underline{Com Obs.Paris}}}{}
+%  \cvitem{2020}{Fête de la science à
+%  l'Observatoire}{\href{https://youtu.be/r70a8Ztte4w}{\underline{Youtube Live}}}{Gaia : Le plus vaste
+%catalogue d'étoiles}
+%  \cvitem{2019}{Conférence étoiles en
+%  scène}{\href{https://www.obspm.fr/etoiles-en-scene-au-grand-rex.html}{\underline{Com Obs. Paris}}}{Conférence express au Grand Rex}
+%  \cvitem{2018}
+%  {Conférence Pint of science}
+%  {\href{https://pintofscience.fr/}{\underline{Pint of science France}}}{La mission spatiale Gaia}
+%\end{cvtable}
+
+\cvsection{Responsabilités Administratives et Structurantes}
 \begin{cvtable}
-  \cvitem{2020}{\textbf{Conférence de Presse Gaia EDR3}}{\href{https://youtu.be/kOLjv-9lsmA?t=2145}
-    {\underline{Com Obs.Paris}}}{}
-  \cvitem{2020}{Fête de la science à
-  l'Observatoire}{\href{https://youtu.be/r70a8Ztte4w}{\underline{Youtube Live}}}{Gaia : Le plus vaste
-catalogue d'étoiles}
-  \cvitem{2019}{Conférence étoiles en
-  scène}{\href{https://www.obspm.fr/etoiles-en-scene-au-grand-rex.html}{\underline{Com Obs. Paris}}}{Conférence express au Grand Rex}
-  \cvitem{2018}
-  {Conférence Pint of science}
-  {\href{https://pintofscience.fr/}{\underline{Pint of science France}}}{La mission spatiale Gaia}
-\end{cvtable}
+  \cvitemshort{2019}{Membre du comité de pilotage pour la réforme du Master 1 SUTS de
+l'Observatoire de Paris : 
+\begin{itemize}[noitemsep,nolistsep,leftmargin=*]
+  \item Définition des nouveau enseignement et programme
+    \item audition et choix des enseignant
+      \item bouclage de la plaquette pour la rentré 2020
+\end{itemize}
+}
+  \cvitemshort{2017-2019}{Représentant des étudiants de l'Observatoire de
+  Paris au conseil d'administration (CA), au conseil de l'Unité Formation-Enseignement (CUFE)
+et au conseil de la documentation (CDOC)}
 
+
+\end{cvtable}
 
 \cvsection{Communications}
 \subsection{Publications}
@@ -221,22 +286,17 @@ catalogue d'étoiles}
 \end{cvtable}
 
 
-\cvsection{Responsabilités Administratives et Structurantes}
-\begin{cvtable}
-  \cvitemshort{2017-2019}{Représentant des étudiants de l'Observatoire de
-  Paris au conseil d'administration (CA), au conseil de l'Unité Formation-Enseignement (CUFE)
-et au conseil de la documentation (CDOC)}
 
-  \cvitemshort{2019}{Membre du comité de pilotage pour la réforme du Master 1 SUTS de
-l'Observatoire de Paris}
-\end{cvtable}
 
 \cvsection{Formations}
 \begin{cvtable}
+\cvitem{2021}{\textbf{Machine learning en python}}{CNRS - ifsem}{}
+\cvitem{2018}{\textbf{Docker}}{Observatoire de Paris - IN2P3}{}
+\cvitem{2017}{\textbf{Python Avancé}}{Observatoire de Paris}{}
   \cvitem{2016-2019}{\textbf{Doctorat} (\href{https://tel.archives-ouvertes.fr/tel-02879238/document}{Manuscrit
   en ligne})}{Observatoire de Paris}{}
   \cvitem{2014-2016}{Master}{Observatoire de Paris}{Dynamique des systèmes gravitationnels}
   % \cvitem{2014-2015}{Master 1}{Observatoire de Paris}{Sciences de L'univers et technologies spatiales}
   % \cvitem{2011-2014}{Licence}{Université Lille 1}{Physique fondamentale}
 \end{cvtable}
-\end{document} 
+\end{document}% FortySecondsCV LaTeX template
